src/objects/PSA_Project_Forecast_Detail__c.object
<CustomObject>
    <description>Provides detail level for rollup to monthly PSA Project Forecast records, with each record referencing an assigment, resource request, or sum of scheduled expense or fixed fee services billings or billing rule adjustments</description>
    <fields>
        <fullName>PSA_Actual_Billings__c</fullName>
        <description>Contains amount of actual billings for the related source record(s).  If source is an assignment, contains the actual time-based billings.  Otherwise contains any actual billings based on expenses, fixed fee services, or adjustments.</description>
        <inlineHelpText>Contains amount of actual billings for the related source record(s). If source is an assignment, contains the actual timecard-based billings. Otherwise contains any actual billings based on expenses, fixed fee services, or adjustments.</inlineHelpText>
        <label>Actual Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Actual_Cost__c</fullName>
        <description>From Est v Actuals for any related assignment, the actual hours time cost rate</description>
        <inlineHelpText>From Est v Actuals for any related assignment, the actual hours time cost rate</inlineHelpText>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Actual_Hours__c</fullName>
        <description>Provided from Est vs Actuals, actual hours approved for the period for any related Assignment</description>
        <inlineHelpText>Provided from Est vs Actuals by the calculation. Contains the actual hours approved for the period for any related assignment.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Est_Vs_Actuals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Estimate vs Actuals record if the source is an Assignment or Resource Request</description>
        <inlineHelpText>Lookup to the related Estimate vs Actuals record if the source is an Assignment or Resource Request</inlineHelpText>
        <label>Est Vs Actuals</label>
        <referenceTo>pse__Est_Vs_Actuals__c</referenceTo>
        <relationshipLabel>PSA Project Forecast Details</relationshipLabel>
        <relationshipName>PSA_Project_Forecast_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_For_Month_Ending__c</fullName>
        <description>Date representing the last day of the month to which the record relates</description>
        <formula>PSA_Project_Forecast__r.PSA_For_Month_Ending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Month Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Billings__c</fullName>
        <description>Scheduled Billings multiplied by Forecast Category Percent</description>
        <formula>PSA_Scheduled_Billings__c *  PSA_Forecast_Category_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Billings multiplied by Forecast Category Percent</inlineHelpText>
        <label>Forecast Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category_Percent__c</fullName>
        <description>A percentage representing the confidence level associated with the Forecast Category value</description>
        <inlineHelpText>A percentage representing the confidence level associated with the Forecast Category value.  This is supplied from the percentages defined in PSA Forecast Settings.</inlineHelpText>
        <label>Forecast Category Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category__c</fullName>
        <description>For weighting of calculated billings based on a confidence level percentage associated with each category. If the source record doesn’t have its own Forecast Category value, the value is supplied as the Project&apos;s Forecast Category.</description>
        <inlineHelpText>For weighting of calculated billings based on a confidence level percentage associated with each category. If the source record doesn’t have its own Forecast Category value, the value is supplied as the Project&apos;s Forecast Category.</inlineHelpText>
        <label>Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Source__c</fullName>
        <description>Description of the source of the forecast detail</description>
        <inlineHelpText>Description of the source of the forecast detail, for use in reporting</inlineHelpText>
        <label>Forecast Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Type__c</fullName>
        <description>Specifies the type of record comprising the forecast detail source</description>
        <inlineHelpText>Specifies the type of record comprising the forecast detail source</inlineHelpText>
        <label>Forecast Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Fee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Include_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the record should be included in forecast reporting</description>
        <inlineHelpText>Automatically set by the Billing Forecast calculation, specifies whether the record should be included in forecast reporting</inlineHelpText>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Item_Key__c</fullName>
        <description>Unique key generated by the forecast calculation identifying the source of the calculated and/or summarized info, allowing the calculation process to find and update previously created records.</description>
        <label>Item Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Project_Forecast__c</fullName>
        <label>PSA Project Forecast</label>
        <referenceTo>PSA_Project_Forecast__c</referenceTo>
        <relationshipLabel>PSA Project Forecast Details</relationshipLabel>
        <relationshipName>PSA_Project_Forecast_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSA_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Forecast Detail relates to an assignment, provides a lookup the assigned resource</description>
        <inlineHelpText>If the Forecast Detail relates to an assignment, provides a lookup the assigned resource</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PSA Project Forecast Details</relationshipLabel>
        <relationshipName>PSA_Project_Forecast_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Bill_Rate__c</fullName>
        <description>Bill Rate from either the Assignment or Resource Request (as related to the EVA record)</description>
        <inlineHelpText>Bill Rate from either the Assignment or Resource Request</inlineHelpText>
        <label>Scheduled Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Billings__c</fullName>
        <description>Scheduled billings based on the source. If from Assignment or Resource Request, will be set to Scheduled Time Billings Seasonal.  If from Expense, Fixed Fee Services, or Adjustments, will be calculated and set separately.</description>
        <inlineHelpText>Scheduled billings based on the forecast source. If from Assignment or Resource Request, will be set to the same value as Scheduled Time Billings Seasonal. If from Expense, Fixed Fee Services, or Adjustments, will be calculated and set separately.</inlineHelpText>
        <label>Scheduled Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Cost_Seasonal__c</fullName>
        <description>Scheduled cost multiplied by Seasonality Factor</description>
        <formula>If(NOT(IsBlank(PSA_Seasonality_Factor__c)), PSA_Scheduled_Cost__c * PSA_Seasonality_Factor__c, PSA_Scheduled_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Cost multiplied by related Seasonality Factor, to provide cost adjusted by seasonal availability</inlineHelpText>
        <label>Scheduled Cost Seasonal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Cost__c</fullName>
        <description>Scheduled hours times cost rate for a related resource request or assignment (if applicable), and month</description>
        <inlineHelpText>Scheduled hours times cost rate for a related resource request or assignment (if applicable), and month</inlineHelpText>
        <label>Scheduled Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Days__c</fullName>
        <description>Summarized Estimated Days value from Est vs Actuals records for related assignments or resource requests. Used in calculating forecast billings of Expenses as Flat Amount per Day.</description>
        <inlineHelpText>Summarized Estimated Days value from Est vs Actuals records for related assignments or resource requests. Used in calculating forecast billings of Expenses as Flat Amount per Day.</inlineHelpText>
        <label>Scheduled Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Hours_Seasonal__c</fullName>
        <description>Scheduled Hours * related Seasonality Factor, to provide hours adjusted by seasonal availability</description>
        <formula>IF(NOT(IsBlank(PSA_Seasonality_Factor__c)), PSA_Scheduled_Hours__c * PSA_Seasonality_Factor__c, PSA_Scheduled_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Hours * related Seasonality Factor, to provide hours adjusted by seasonal availability</inlineHelpText>
        <label>Scheduled Hours Seasonal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Hours__c</fullName>
        <description>Scheduled hours for a related resource request or assignment (if applicable), and month</description>
        <inlineHelpText>Scheduled hours for a related resource request or assignment (if applicable), and month</inlineHelpText>
        <label>Scheduled Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Time_Billings_Seasonal__c</fullName>
        <description>Scheduled Time Billings multiplied by Seasonality Factor</description>
        <formula>IF(NOT(ISBLANK(PSA_Seasonality_Factor__c)), PSA_Seasonality_Factor__c * PSA_Scheduled_Time_Billings__c, PSA_Scheduled_Time_Billings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Time Billings multiplied by Seasonality Factor</inlineHelpText>
        <label>Scheduled Time Billings Seasonal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Scheduled_Time_Billings__c</fullName>
        <description>Sum of expected Billings from scheduled Assignments and Resource Requests</description>
        <inlineHelpText>Sum of scheduled billings for the period from a scheduled Assignment or Resource Request</inlineHelpText>
        <label>Scheduled Time Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Seasonality_Factor__c</fullName>
        <description>Obtained from the monthly Time Period related to the record, a percentage supplied by Guidewire to the time period representing an adjustment factor for scheduled hours based on history of resource time off, etc., to produce forecasts based on expected (as opposed to scheduled) hours</description>
        <inlineHelpText>For calculating seasonally-adjusted hours, costs, and time-related billings based on resource availability</inlineHelpText>
        <label>Seasonality Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PSA Project Forecast Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PFD-{0000000}</displayFormat>
        <label>PSA Project Forecast Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Project Forecast Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>